# libpal

./: CMakeLists.txt  README
cmake/: CMakeApp.txt  CMakeCommands.txt  CMakeHeader.txt  CMakeLists.txt
include/pal/: baseapp.h  eventtask.h  httpclient.h  httpserver.h  pal.h  palPoco.h  pal_config.h  pallogger.h  palutils.h
src/: baseapp.cpp  eventtask.cpp  httpclient.cpp  httpserver.cpp  main.cpp  pallogger.cpp  palutils.cpp
template/: CMakeLists.txt  Makefile  config.h  template.cpp  template.h  template.ini
